Fix integer usage